# personal-projects

./: .gitignore  CMakeLists.txt
CIS/algorithm_and_modeling_method_in_biomedical_Imaging/: course_intro.md
CIS_program/algorithm_and_modeling_method_in_biomedical_Imaging/: course_intro.md
blog-taoxiang/: about.html  index.html
blog-taoxiang/essays/: 12-27-2020.html
desktopApps/: test.py
leetcode/: 135. Candy.py  387. First Unique Character in a String.cpp  5630. Maximum Erasure Value.py  766. Toeplitz Matrix.py  85. Maximal Rectangle.py  ABSHIP - Advanced Battleships.py  Advanced Battleships.cpp  Bipartite Permutation.cpp  Boring Factorials.cpp  DIXIE001.cpp  prime pattern.cpp  test.cpp
leetcode/Advanced Battleships/src/: Main.java
mini-projects/HTML/: 92-过渡模块-手风琴效果.html  PDF to Image Approach.html  collapsed sidebar.html  id-javascript.html  notes.html  test.html  title.html
mini-projects/HTML/baidu/: baidu_homepage.html
mini-projects/Java/src/: Jevilix.java  Main.java
mini-projects/c&c++/: test.cpp
mini-projects/c&c++/OOP/: string.cpp
mini-projects/c&c++/homework_reminder/: .homework.txt  Makefile  Readme.md  helper.h  homework_reminder  impl.cpp
mini-projects/c&c++/server&client/: CMakeLists.txt  client  (+19 more)
mini-projects/python/: simple_cryption.py  test.py
uni-projects/Fundamentals_of_Programming/: header.txt
uni-projects/algorithmus/: Hashing.py  QuickSelect.py
uni-projects/data_structure/: AVL_tree.py  BinearySearchTree.py  ListTest.py
uni-projects/mpi/: CMakeLists.txt  Makefile  main.cpp  mpi_test  results.txt  results_without_omp.txt
(+518 files in other folders)
